--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "apimock": "json-server --watch db.json --port 3001 --delay 1000"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
+    "antd": "^4.22.8",
     "json-server": "^0.17.0",
     "next": "12.2.5",
     "react": "18.2.0",
